# SimFSXInterface

./: .gitignore  CMakeLists.txt  FSXInterface.sln
FSXInterface/: FSXInterface.cpp  FSXInterface.vcxproj  FSXInterface.vcxproj.filters
include/: FSXIdentifiers.h
src/: CMakeLists.txt  ClientEvent.cpp  main.cpp
src/examples/: CMakeLists.txt
src/examples/Headers/: ClientEvent.h  SendEventA.h
src/examples/Source/: ClientEvent.cpp  SendEventA.cpp
